feat: Creation handler for click button 'start search'.

--- a/views/commands_views.yaml
+++ b/views/commands_views.yaml
@@ -5,3 +5,7 @@ start_msg:
   <i>Нельзя спамить, продвигать свои услуги, оскорблять собеседников.</i>\n\n
   <i>Удачного общения! Будьте вежливы к собеседникам ❤️</i>\n\n
   <b>Скорее начинай общение 👇🏻</b>"
+
+
+search_msg:
+  "Поиск собеседника..."
