feat: Global update migrations, models in date base.

--- a/views/errors_views.yaml
+++ b/views/errors_views.yaml
@@ -1,2 +1,2 @@
 error_search:
-  '🕓 Поиск собеседника слишком долгий, это может занять больше времени, чем обычно...\n\n'
+  "🕓 Поиск собеседника слишком долгий, это может занять больше времени, чем обычно...\n\n"
